--- a/employee-directory/public/index.html
+++ b/employee-directory/public/index.html
@@ -6,7 +6,7 @@
     <title>Employee Directory</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   </head>
-  <body>
+  <body style="background-color: rgb(108, 117, 125);">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
